test/variables/static/bad-attr-arg.good
bad-attr-arg.chpl:1: In function 'f':
bad-attr-arg.chpl:3: error: invalid argument to @functionStatic attribute
