test/variables/static/bad-attr-arg.chpl
proc f() {
  @functionStatic(42)
  ref x = 42;
}
f();
